--- a/ext/bg/import.html
+++ b/ext/bg/import.html
@@ -45,7 +45,8 @@
                 <ol>
                     <li>Left-click on the <img src="../img/icon16.png" alt> icon to enable or disable Yomichan for the current browser instance.</li>
                     <li>Right-click on the <img src="../img/icon16.png" alt> icon and select <em>Options</em> to open the Yomichan options page.</li>
-                    <li>Hold down <kbd>Shift</kbd> or the middle mouse button as you move your cursor over text to see definitions (or <kbd>Shift</kbd> + <kbd>Ctrl</kbd> for Kanji).</li>
+                    <li>Hold down <kbd>Shift</kbd> (or the middle mouse button) as you hover over text to see term definitions.</li>
+                    <li>Hold down <kbd>Ctrl</kbd> + <kbd>Shift</kbd> (or the middle mouse button) as you hover over text to see Kanji definitions.</li>
                     <li>Resize the definitions window by dragging the bottom-left corner inwards or outwards.</li>
                     <li>Click on Kanji in the definition window to view additional information about that character.</li>
                 </ol>
