--- a/ext/bg/settings.html
+++ b/ext/bg/settings.html
@@ -140,26 +140,41 @@
                 </div>
 
                 <div class="form-group options-advanced">
-                    <label>Popup size (width &times; height, in pixels)</label>
                     <div class="row">
-                        <div class="col-xs-6"><input type="number" min="1" id="popup-width" class="form-control"></div>
-                        <div class="col-xs-6"><input type="number" min="1" id="popup-height" class="form-control"></div>
+                        <div class="col-xs-6">
+                            <label for="popup-display-mode">Popup width (in pixels)</label>
+                            <input type="number" min="1" id="popup-width" class="form-control">
+                        </div>
+                        <div class="col-xs-6">
+                            <label for="popup-display-mode">Popup height (in pixels)</label>
+                            <input type="number" min="1" id="popup-height" class="form-control">
+                        </div>
                     </div>
                 </div>
 
                 <div class="form-group options-advanced">
-                    <label>Popup offset (horizontal, vertical; in pixels)</label>
                     <div class="row">
-                        <div class="col-xs-6"><input type="number" min="0" id="popup-horizontal-offset" class="form-control"></div>
-                        <div class="col-xs-6"><input type="number" min="0" id="popup-vertical-offset" class="form-control"></div>
+                        <div class="col-xs-6">
+                            <label for="popup-display-mode">Horizontal popup offset (in pixels)</label>
+                            <input type="number" min="0" id="popup-horizontal-offset" class="form-control">
+                        </div>
+                        <div class="col-xs-6">
+                            <label for="popup-display-mode">Vertical popup offset (in pixels)</label>
+                            <input type="number" min="0" id="popup-vertical-offset" class="form-control">
+                        </div>
                     </div>
                 </div>
 
                 <div class="form-group options-advanced">
-                    <label>Popup offset for vertical text (horizontal, vertical; in pixels)</label>
                     <div class="row">
-                        <div class="col-xs-6"><input type="number" min="0" id="popup-horizontal-offset2" class="form-control"></div>
-                        <div class="col-xs-6"><input type="number" min="0" id="popup-vertical-offset2" class="form-control"></div>
+                        <div class="col-xs-6">
+                            <label for="popup-display-mode">Horizontal popup offset for vertical text (in pixels)</label>
+                            <input type="number" min="0" id="popup-horizontal-offset2" class="form-control">
+                        </div>
+                        <div class="col-xs-6">
+                            <label for="popup-display-mode">Vertical popup offset for vertical text (in pixels)</label>
+                            <input type="number" min="0" id="popup-vertical-offset2" class="form-control">
+                        </div>
                     </div>
                 </div>
 
