Add checkbox for options.general.enable

--- a/ext/bg/settings.html
+++ b/ext/bg/settings.html
@@ -71,6 +71,10 @@
                 <h3>General Options</h3>
 
                 <div class="checkbox">
+                    <label><input type="checkbox" id="enable"> Enable content scanning</label>
+                </div>
+
+                <div class="checkbox">
                     <label><input type="checkbox" id="show-usage-guide"> Show usage guide on startup</label>
                 </div>
 
