--- a/ext/bg/settings.html
+++ b/ext/bg/settings.html
@@ -100,6 +100,25 @@
                     <input type="text" id="profile-name" class="form-control">
                 </div>
 
+                <div class="modal fade" tabindex="-1" role="dialog" id="profile-copy-modal">
+                    <div class="modal-dialog modal-dialog-centered">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                                <h4 class="modal-title">Copy Profile</h4>
+                            </div>
+                            <div class="modal-body">
+                                <p>Select which profile to copy options from:</p>
+                                <select class="form-control" id="profile-copy-source"></select>
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                                <button type="button" class="btn btn-primary" id="profile-copy-confirm">Copy Profile</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
                 <div class="modal fade" tabindex="-1" role="dialog" id="profile-remove-modal">
                     <div class="modal-dialog modal-dialog-centered">
                         <div class="modal-content">
