--- a/ext/bg/guide.html
+++ b/ext/bg/guide.html
@@ -15,7 +15,7 @@
 
             <p>
                 Read the steps below to get up and running with Yomichan. For complete documentation,
-                visit the <a href="https://foosoft.net/projects/yomichan/" target="_blank">official homepage</a>.
+                visit the <a href="https://foosoft.net/projects/yomichan/" target="_blank" rel="noopener">official homepage</a>.
             </p>
 
             <ol>
