Upgrade website URLs to https

--- a/ext/bg/settings.html
+++ b/ext/bg/settings.html
@@ -355,7 +355,7 @@
                 </div>
 
                 <p class="help-block">
-                    Yomichan supports automatic flashcard creation for <a href="http://ankisrs.net/" target="_blank" rel="noopener">Anki</a>, a free application
+                    Yomichan supports automatic flashcard creation for <a href="https://apps.ankiweb.net/" target="_blank" rel="noopener">Anki</a>, a free application
                     designed to help you remember. This feature requires installation of the
                     <a href="https://foosoft.net/projects/anki-connect/" target="_blank" rel="noopener">AnkiConnect</a> plugin.
                 </p>
@@ -450,7 +450,7 @@
 
                         <div class="options-advanced">
                             <p class="help-block">
-                                Fields are formatted using the <a href="http://handlebarsjs.com/">Handlebars.js</a> template rendering
+                                Fields are formatted using the <a href="https://handlebarsjs.com/" target="_blank" rel="noopener">Handlebars.js</a> template rendering
                                 engine. Advanced users can modify these templates for ultimate control of what information gets included in
                                 their Anki cards. If you encounter problems with your changes you can always <a href="#" id="field-templates-reset">reset to default</a>
                                 template settings.
