--- a/ext/bg/search.html
+++ b/ext/bg/search.html
@@ -10,21 +10,19 @@
     </head>
     <body>
         <div class="container-fluid">
-            <div id="intro">
+            <div id="intro" style="overflow: hidden;">
                 <div class="page-header">
                     <h1>Yomichan Search</h1>
                 </div>
-                <p>Search your installed dictionaries by entering a Japanese expression into the field below.</p>
+                <p style="margin-bottom: 0;">Search your installed dictionaries by entering a Japanese expression into the field below.</p>
             </div>
 
-            <p>
-                <form class="input-group">
-                    <input type="text" class="form-control" placeholder="Search for..." id="query" autofocus>
-                    <span class="input-group-btn">
-                        <input type="submit" class="btn btn-default form-control" id="search" value="Search" disabled>
-                    </span>
-                </form>
-            </p>
+            <form class="input-group" style="padding-top: 10px;">
+                <input type="text" class="form-control" placeholder="Search for..." id="query" autofocus>
+                <span class="input-group-btn">
+                    <input type="submit" class="btn btn-default form-control" id="search" value="Search" disabled>
+                </span>
+            </form>
 
             <div id="spinner">
                 <img src="/mixed/img/spinner.gif">
