Implement custom window scroll

--- a/ext/fg/float.html
+++ b/ext/fg/float.html
@@ -41,6 +41,7 @@
         <script src="/fg/js/document.js"></script>
         <script src="/fg/js/source.js"></script>
         <script src="/mixed/js/display.js"></script>
+        <script src="/mixed/js/scroll.js"></script>
 
         <script src="/fg/js/float.js"></script>
 
