--- a/ext/bg/search.html
+++ b/ext/bg/search.html
@@ -47,6 +47,7 @@
         <script src="/fg/js/source.js"></script>
         <script src="/mixed/js/display.js"></script>
         <script src="/mixed/js/japanese.js"></script>
+        <script src="/mixed/js/scroll.js"></script>
 
         <script src="/bg/js/search.js"></script>
         <script src="/bg/js/search-frontend.js"></script>
