--- a/ext/bg/settings.html
+++ b/ext/bg/settings.html
@@ -10,6 +10,10 @@
     </head>
     <body>
         <div class="container">
+            <div class="page-header">
+                <h1>Yomichan Options</h1>
+            </div>
+
             <div class="profile-form">
                 <h3>Profiles</h3>
 
