--- a/ext/bg/background.html
+++ b/ext/bg/background.html
@@ -46,6 +46,7 @@
         <script src="/bg/js/translator.js"></script>
         <script src="/bg/js/util.js"></script>
         <script src="/mixed/js/audio-system.js"></script>
+        <script src="/mixed/js/dictionary-data-util.js"></script>
         <script src="/mixed/js/object-property-accessor.js"></script>
 
         <script src="/bg/js/background-main.js"></script>
