--- a/ext/bg/settings.html
+++ b/ext/bg/settings.html
@@ -1162,6 +1162,7 @@
         <script src="/bg/js/settings/profiles.js"></script>
         <script src="/bg/js/settings/settings-controller.js"></script>
         <script src="/bg/js/settings/storage.js"></script>
+        <script src="/mixed/js/dictionary-data-util.js"></script>
         <script src="/mixed/js/object-property-accessor.js"></script>
         <script src="/mixed/js/task-accumulator.js"></script>
         <script src="/mixed/js/dom-data-binder.js"></script>
