--- a/ext/bg/background.html
+++ b/ext/bg/background.html
@@ -45,6 +45,7 @@
         <script src="/bg/js/text-source-map.js"></script>
         <script src="/bg/js/translator.js"></script>
         <script src="/bg/js/util.js"></script>
+        <script src="/mixed/js/cache-map.js"></script>
         <script src="/mixed/js/audio-system.js"></script>
         <script src="/mixed/js/dictionary-data-util.js"></script>
         <script src="/mixed/js/object-property-accessor.js"></script>
